# GameWithCards

./: CMakeLists.txt  Card.cpp  Circle.cpp  Circle.h  Ellipse.cpp  Mouse.h  Point.cpp  Rectangle.cpp  Square.cpp  Star.cpp  Vector2D.cpp  main.cpp  paintCards.h
include/: Card.h  Clicks.h  Ellipse.h  Point.h  Primitiv.h  Rectangle.h  Square.h  Star.h  Stars.h  Vector2D.h  display.h
src/: CMakeLists.txt  Circle.cpp  Ellipse.cpp  Point.cpp  Rectangle.cpp  Vector2D.cpp  main.cpp
